--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,14 @@
-@import 'base/reset';
-@import 'abstracts/variables';
-@import 'abstracts/mixins';
-@import 'componets/globle';
-@import 'layout/navigation';
-@import 'layout/player';
-@import 'layout/header';
-@import 'layout/music';
-@import 'layout/theme';
-@import 'layout/category';
-@import 'layout/event';
-@import 'layout/list';
-@import 'layout/radio';
-@import 'layout/lyris';
+@import "base/reset";
+@import "abstracts/variables";
+@import "abstracts/mixins";
+@import "componets/globle";
+@import "layout/navigation";
+@import "layout/player";
+@import "layout/header";
+@import "layout/music";
+@import "layout/theme";
+@import "layout/category";
+@import "layout/event";
+@import "layout/list";
+@import "layout/radio";
+@import "layout/lyris";
