--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -65,7 +65,7 @@
       transform: translateY(-50%);
       color: rgb(204, 204, 204);
       cursor: pointer;
-      transition: .2s ease-in-out;
+      transition: 0.2s ease-in-out;
       z-index: 99;
 
       &:hover {
@@ -119,7 +119,7 @@
       text-transform: capitalize;
       padding: 8.2px;
       border-radius: 5px;
-      transition: all .1s ease-in;
+      transition: all 0.1s ease-in;
     }
 
     ul li a:hover {
@@ -146,7 +146,7 @@
     background-color: $bg-light;
     border-radius: 50%;
     cursor: pointer;
-    transition: .2s ease-in-out;
+    transition: 0.2s ease-in-out;
 
     &:hover {
       background-color: hsla(0deg, 0%, 100%, 0.08);
@@ -172,7 +172,7 @@
 
     &::before {
       position: absolute;
-      content: '';
+      content: "";
       width: 10px;
       height: 10px;
       top: -5px;
@@ -214,7 +214,7 @@
       h3 {
         font-weight: 500;
         text-transform: capitalize;
-        transition: all .2s ease-in-out;
+        transition: all 0.2s ease-in-out;
 
         &:hover {
           color: $link-hover;
@@ -226,6 +226,15 @@
         font-size: 1.2rem;
         color: $text-secondary;
       }
+    }
+  }
+  @include mb {
+    &-left img {
+      width: 20px;
+    }
+
+    &-search > ion-icon {
+      font-size: 1.7rem;
     }
   }
 }
